# speaker-visualization

./: .gitignore  LICENSE  README.md  concat_list.txt  debug.txt  main.py  mkdocs.yml  pyproject.toml
docs/: docs.md  drive.md  index.md  mp3.md  tag.md  video.md  video2.md
src/: description.html  docs.py  drive.py  main.py  mp3.py  tag.py  video.py  video2.py  video3.py  video3_2.py  video3_3.py  video3_og.py
src/templates/: description_template.html
video refs/: input.txt  labels.txt  notes.txt
video refs/test/: labels.txt
