[project]
name = "speaker-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.17",
    "mkdocstrings[python]>=0.30.0",
]
